# OpenRun

./: .gitignore  AGENTS.md  README.md  __init__.py  docai.md  pyproject.toml  server.py
.github/workflows/: release.yml
adapters/: custom.py  huggingface.py
api/: dependencies.py  routes.py  schemas.py
cli/: main.py  serve.py
core/: state.py
model/: __init__.py  inference.py  loader.py
network/: __init__.py  server.py
openrun/: __init__.py  openrun.txt  server.py
openrun.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
openrun/adapters/: __init__.py  airllm.py  base.py  custom.py  huggingface.py  ollama.py
openrun/api/: dependencies.py  routes.py  schemas.py
openrun/cli/: chat.py  main.py  run.py  serve.py
openrun/core/: config.py  state.py
openrun/model/: inference.py  loader.py
openrun/models/: registry.py
openrun/network/: server.py  tunnel.py
openrun_llm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
streaming/: __init__.py
