[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openrun-llm"
version = "1.0.14"
description = "Turn any local AI model into an OpenAI-compatible API"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "transformers",
    "torch",
    "accelerate",
    "questionary"
]

[project.scripts]
openrun = "openrun.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openrun*"]

[tool.setuptools.package-data]
openrun = ["openrun.txt"]
